--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -9,73 +9,56 @@
 
 <head id="www-sjackson-net" data-template-set="html5-reset">
 
-	<meta charset="utf-8">
-	
-	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	
-	<title>{{ page.title }}</title>
-	
-	<meta name="title" content="">
-	<meta name="description" content="">
-	<meta name="google-site-verification" content="">
-	<!-- Speaking of Google, don't forget to set your site up: http://google.com/webmasters -->
-	
-	<meta name="author" content="Steve Jackson">
-	<meta name="Copyright" content="Copyright Steve Jackson 2011. All Rights Reserved.">
+  <meta charset="utf-8">
 
-	<!-- Dublin Core Metadata : http://dublincore.org/ -->
-	<meta name="DC.title" content="Project Name">
-	<meta name="DC.subject" content="What you're about.">
-	<meta name="DC.creator" content="Who made this site.">
-	
-        <link rel="stylesheet" href="/css/htmlreset.css">
-        <link rel="stylesheet" href="/css/layout.css">
-        <link rel="stylesheet" href="/css/syntax.css">
-        <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css">
-	
-	<script src="/js/modernizr-1.7.min.js"></script>
-        <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <title>{{ page.title }}</title>
+
+  <meta name="title" content="Steve Jackson">
+  <meta name="description" content="I'm a web developer with a love for Ruby on Rails.">
+  <meta name="author" content="Steve Jackson">
+  <meta name="copyright" content="Copyright Steve Jackson 2011. All Rights Reserved.">
+
+  <link rel="stylesheet" href="/css/htmlreset.css">
+  <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css">
+
+  <script src="/js/modernizr-1.7.min.js"></script>
+  <script type="text/javascript" src="http://use.typekit.com/nnc7pcl.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 
 <body>
 
-{{ content }}
+  {{ content }}
 
-<script src="/js/jquery-1.5.1.min.js"></script>
-<script src="/js/jquery.kwicks.js"></script>
-<script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
-<script src="/js/functions.js" type="text/javascript"></script>
-<script src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+  <script src="/js/jquery-1.5.1.min.js"></script>
+  <script src="/js/jquery.kwicks.js"></script>
+  <script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" type="text/javascript"></script>
+  <script src="/js/functions.js" type="text/javascript"></script>
+  <script src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 
-<script>
+  <script>
 
-  $(document).ready(function() {
-    $("a.fb").fancybox({
-      'titlePosition': 'inside',
+    $(document).ready(function() {
+      $("a.fb").fancybox({
+        'titlePosition': 'inside',
+      });
     });
-  });
 
-</script>
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-2995032-2']);
+    _gaq.push(['_trackPageview']);
 
-<!-- Asynchronous google analytics; this is the official snippet.
-	 Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
-	 
-<script>
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-XXXXXX-XX']);
-  _gaq.push(['_trackPageview']);
+  </script>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
--->
-  
 </body>
 </html>
