--- a/css/layout.scss
+++ b/css/layout.scss
@@ -320,9 +320,11 @@ header {
   padding-bottom: $footer-height;
 
   .blog-post {
+    width: $site-width - 20px - 250px;
     border-bottom: 2px solid $hr-color;
     padding-top: 20px;
     padding-bottom: 40px;
+    margin-right: 20px;
   }
 
   .left-split {
@@ -346,7 +348,7 @@ header {
 
   .right-split {
     float: left;
-    width: $site-width - 250px - 25px - 125px - 20px;
+    width: $site-width - 250px - 25px - 125px - 20px - 20px;
     margin-right: 25px;
   }
 }
