--- a/css/layout.scss
+++ b/css/layout.scss
@@ -298,11 +298,11 @@ header {
 .navitem {
   width: 100%;
   height: 100%;
-  margin-top: 13px;
   text-align: center;
 
   a {
     display: block;
+    padding-top: 13px;
     width: 100%;
     height: 100%;
     color: white;
