--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,4 @@
-.highlight { background: #181818; padding: 16px; color: #F8F8F8; margin-bottom: 1em; }
+.highlight { background: #141414; padding: 16px; color: #F8F8F8; margin-bottom: 1em; }
 .highlight {
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
@@ -8,63 +8,64 @@
   border-radius: 7px;
 }
 .highlight * { }
-.highlight .hll { background-color: #ffffcc }
-.highlight .c { color: #5F5A60; font-style: italic } /* Comment */
-.highlight .err { border:#B22518; } /* Error */
-.highlight .k { color: #CDA869 } /* Keyword */
-.highlight .cm { color: #5F5A60; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #5F5A60 } /* Comment.Preproc */
-.highlight .c1 { color: #5F5A60; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #5F5A60; font-style: italic } /* Comment.Special */
-.highlight .gd { background: #420E09 } /* Generic.Deleted */
+.highlight .hll { background-color: #49483e }
+.highlight .c { color: #75715e } /* Comment */
+.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
+.highlight .k { color: #66d9ef } /* Keyword */
+.highlight .l { color: #ae81ff } /* Literal */
+.highlight .n { color: #f8f8f2 } /* Name */
+.highlight .o { color: #f92672 } /* Operator */
+.highlight .p { color: #f8f8f2 } /* Punctuation */
+.highlight .cm { color: #75715e } /* Comment.Multiline */
+.highlight .cp { color: #75715e } /* Comment.Preproc */
+.highlight .c1 { color: #75715e } /* Comment.Single */
+.highlight .cs { color: #75715e } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { background: #B22518 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { background: #253B22 } /* Generic.Inserted */
-.highlight .go {  } /* Generic.Output */
-.highlight .gp { font-weight: bold } /* Generic.Prompt */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt {  } /* Generic.Traceback */
-.highlight .kc {  } /* Keyword.Constant */
-.highlight .kd { color: #e9df8f;  } /* Keyword.Declaration */
-.highlight .kn {  } /* Keyword.Namespace */
-.highlight .kp { color: #9B703F } /* Keyword.Pseudo */
-.highlight .kr {  } /* Keyword.Reserved */
-.highlight .kt {  } /* Keyword.Type */
-.highlight .m { } /* Literal.Number */
-.highlight .s {  } /* Literal.String */ 
+.highlight .kc { color: #66d9ef } /* Keyword.Constant */
+.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
+.highlight .kn { color: #f92672 } /* Keyword.Namespace */
+.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
+.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
+.highlight .kt { color: #66d9ef } /* Keyword.Type */
+.highlight .ld { color: #e6db74 } /* Literal.Date */
 .highlight .n { color: #C1C1C1; }
 .highlight .o { color: #CC3399; }
-.highlight .na { color: #F9EE98 } /* Name.Attribute */
-.highlight .nb { color: #CDA869 } /* Name.Builtin */
-.highlight .nc { color: #9B859D; font-weight: bold } /* Name.Class */
-.highlight .no { color: #9B859D } /* Name.Constant */
-.highlight .nd { color: #7587A6 } /* Name.Decorator */
-.highlight .ni { color: #CF6A4C; font-weight: bold } /* Name.Entity */
-.highlight .nf { color: #9B703F; font-weight: bold } /* Name.Function */
-.highlight .nn { color: #9B859D; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #CDA869; font-weight: bold } /* Name.Tag */
-.highlight .nv { color: #7587A6 } /* Name.Variable */
-.highlight .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #141414 } /* Text.Whitespace */
-.highlight .mf { color: #CF6A4C } /* Literal.Number.Float */
-.highlight .mh { color: #CF6A4C } /* Literal.Number.Hex */
-.highlight .mi { color: #CF6A4C } /* Literal.Number.Integer */
-.highlight .mo { color: #CF6A4C } /* Literal.Number.Oct */
-.highlight .sb { color: #8F9D6A } /* Literal.String.Backtick */
-.highlight .sc { color: #8F9D6A } /* Literal.String.Char */
-.highlight .sd { color: #8F9D6A; font-style: italic; } /* Literal.String.Doc */
-.highlight .s2 { color: #8F9D6A } /* Literal.String.Double */
-.highlight .se { color: #F9EE98; font-weight: bold; } /* Literal.String.Escape */
-.highlight .sh { color: #8F9D6A } /* Literal.String.Heredoc */
-.highlight .si { color: #DAEFA3; font-weight: bold; } /* Literal.String.Interpol */
-.highlight .sx { color: #8F9D6A } /* Literal.String.Other */
-.highlight .sr { color: #E9C062 } /* Literal.String.Regex */
-.highlight .s1 { color: #8F9D6A } /* Literal.String.Single */
-.highlight .ss { color: #CF6A4C } /* Literal.String.Symbol */
-.highlight .bp { color: #00aaaa } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #7587A6 } /* Name.Variable.Class */
-.highlight .vg { color: #7587A6 } /* Name.Variable.Global */
-.highlight .vi { color: #7587A6 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+.highlight .m { color: #ae81ff } /* Literal.Number */
+.highlight .s { color: #e6db74 } /* Literal.String */
+.highlight .na { color: #a6e22e } /* Name.Attribute */
+.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
+.highlight .nc { color: #a6e22e } /* Name.Class */
+.highlight .no { color: #66d9ef } /* Name.Constant */
+.highlight .nd { color: #a6e22e } /* Name.Decorator */
+.highlight .ni { color: #f8f8f2 } /* Name.Entity */
+.highlight .ne { color: #a6e22e } /* Name.Exception */
+.highlight .nf { color: #a6e22e } /* Name.Function */
+.highlight .nl { color: #f8f8f2 } /* Name.Label */
+.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
+.highlight .nx { color: #a6e22e } /* Name.Other */
+.highlight .py { color: #f8f8f2 } /* Name.Property */
+.highlight .nt { color: #f92672 } /* Name.Tag */
+.highlight .nv { color: #f8f8f2 } /* Name.Variable */
+.highlight .ow { color: #f92672 } /* Operator.Word */
+.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
+.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
+.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
+.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
+.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
+.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
+.highlight .sc { color: #e6db74 } /* Literal.String.Char */
+.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
+.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
+.highlight .se { color: #ae81ff } /* Literal.String.Escape */
+.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
+.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
+.highlight .sx { color: #e6db74 } /* Literal.String.Other */
+.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
+.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
+.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
+.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
+.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
+.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
