--- a/_assets/stylesheets/base/_variables.scss
+++ b/_assets/stylesheets/base/_variables.scss
@@ -26,7 +26,8 @@ $medium-gray: #999;
 $light-gray: #ddd;
 
 // Font Colors
-$base-background-color: #fafafa;
+$base-background-color: lighten(desaturate(#FFC0AA, 10%), 13%);
+$base-background-color: lighten(desaturate(rgb(211, 111, 111), 23%), 33%);
 $base-font-color: $dark-gray;
 $action-color: $theme-base-color;
 
