--- a/_assets/stylesheets/main.scss.erb
+++ b/_assets/stylesheets/main.scss.erb
@@ -17,6 +17,7 @@ canvas#effect_canvas {
   width: 100%;
   height: 1000px;
 
+  background: url(<%= asset_path 'seamless_paper_texture.jpg' %>);
   top: 0;
   left: 0;
 
