Progress on redesign.

--- a/_assets/stylesheets/base/_variables.scss
+++ b/_assets/stylesheets/base/_variables.scss
@@ -2,6 +2,8 @@
 $theme-base-color: #CD0A0A;
 $color-theme-secondary: #485560;
 
+$project-entry-max-height: 300px;
+
 // Typography
 $base-font-family: "Open Sans", sans;
 $heading-font-family: $base-font-family;
