--- a/_assets/stylesheets/base/_grid-settings.scss
+++ b/_assets/stylesheets/base/_grid-settings.scss
@@ -5,10 +5,13 @@
 // $gutter: 30px;
 // $grid-columns: 12;
 // $max-width: em(1088);
-
+///
+//$max-width: em(1388);
 // Neat Breakpoints
 $medium-screen: em(640);
 $large-screen: em(860);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$mobile: new-breakpoint(max-width $medium-screen 4);
+$mobile-up: new-breakpoint(min-width $medium-screen 12);
+//$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
+//$large-screen-up: new-breakpoint(min-width $large-screen 8);
