--- a/_assets/stylesheets/base/_typography.scss
+++ b/_assets/stylesheets/base/_typography.scss
@@ -33,7 +33,7 @@ a {
   &:focus,
   &:hover {
     color: white;
-    background-color: lighten($action-color, 10%);
+    background-color: lighten($action-color, 30%);
   }
 
   &:active,
@@ -55,3 +55,9 @@ picture {
   margin: 0;
   max-width: 100%;
 }
+
+strong {
+  font-weight: 600;
+  font-style: normal;
+}
+
