--- a/_assets/stylesheets/main.scss.erb
+++ b/_assets/stylesheets/main.scss.erb
@@ -1,18 +1,29 @@
 @charset "UTF-8";
 
-@import "bourbon", "neat";
+@import "vendor/lightbox";
 
-@import "base/base"; // Bitters
+@import "bourbon";
+
+@import "base/grid-settings";
+@import "neat";
+
+@import "base/base";
+
+@import "helpers";
 
 body {
   font-family: $base-font-family;
+  font-size: 1em;
+  font-weight: 400;
   margin: 0;
+
+  background: url(<%= asset_path 'seamless_paper_texture.jpg' %>);
 }
 
 canvas#effect_canvas {
   background-color: $base-background-color;
-  z-index: -1;
-  position: fixed;
+  z-index: -999;
+  position: absolute;
 
   width: 100%;
   height: 1000px;
@@ -70,7 +81,7 @@ header #centerpiece  {
   margin: 0 auto;
   text-align: center;
 
-  min-height: 500px;
+  min-height: 600px;
 
   .slogan_header {
     @include span-columns(12);
@@ -95,26 +106,171 @@ header #centerpiece  {
 }
 
 section#features_row_1 {
+  margin-top: 0;
+  border-top: white 1px solid;
+  border-bottom: white 1px solid;
+
   width: 100%;
   background:
     radial-gradient(
-      lighten($color-theme-secondary, 10%),
+      lighten($color-theme-secondary, 6%),
       $color-theme-secondary);
 
-  div#wrapper {
+  div.wrapper {
     @include outer-container;
-    margin-top: 150px;
+    margin-top: 0px;
 
     width: 100%;
-    min-height: 300px;
 
     padding: 40px;
 
     color: white;
 
-    .feature {
-      @include span-columns(4);
+    .content {
+
+      @include media($mobile) {
+        @include span-columns(4);
+      }
+
+      @include media($mobile-up) {
+        @include span-columns(8);
+        @include shift(2);
+      }
+      text-align: center;
+
+      .text {
+        min-height: 100px;
+        font-weight: 400;
+      }
     }
   }
 }
 
+main {
+  z-index: 0;
+  background: url(<%= asset_path 'seamless_paper_texture.jpg' %>);
+}
+
+section#portfolio_header {
+  margin-top: 30px;
+  margin-bottom: 25px;
+
+  div.wrapper {
+    @include outer-container;
+    position: relative;
+
+    .portfolio {
+      @include span-columns(12);
+      text-align: center;
+      color: $color-theme-secondary;
+      font-weight: 300;
+      font-size: 2em;
+
+      padding-bottom: 20px;
+
+      position: relative;
+    }
+
+    .portfolio:after {
+      background-color: darken(tan, 1%);
+      content: "";
+      position: absolute;
+      top: 100%;
+      height: 1px;
+      width: 400px;
+      margin-left: -200px;
+
+      left: 50%;
+    }
+
+  }
+}
+
+.portfolio_entry {
+  min-height: 200px;
+  margin-bottom: 50px;
+
+  .wrapper {
+    @include outer-container;
+
+    min-height: 200px;
+    max-height: $project-entry-max-height;
+
+    .description {
+      h3 {
+        font-weight: 600;
+        font-size: 1.5em;
+        color: $color-theme-secondary;
+      }
+
+      p {
+        font-weight: 400;
+      }
+    }
+
+    .display {
+      @extend .hover_highlight;
+
+      max-height: $project-entry-max-height;
+      overflow: hidden;
+
+      video {
+        width: 100%;
+        height: $project-entry-max-height;
+
+        object-fit: cover !important;
+
+        -webkit-background-size:contain;
+        -moz-background-size:cover;
+        -o-background-size:cover;
+        background-size:cover;
+      }
+
+      video.chinesedictator {
+        background:transparent url(<%= asset_path 'chinesedictator_poster.png' %>) no-repeat 0 0;
+      }
+      video.mazery {
+        background:transparent url(<%= asset_path 'mazery_poster.png' %>) no-repeat 0 0;
+      }
+
+      a, a:hover, a:visited {
+        text-decoration: none;
+        border-bottom: none;
+        background-color: initial;
+      }
+    }
+
+    .left {
+      @include media($mobile) {
+        @include span-columns(4);
+      }
+      @include media($mobile-up) {
+        @include span-columns(6);
+      }
+      text-align: right;
+    }
+
+    .right {
+      @include media($mobile) {
+        @include span-columns(4);
+      }
+      @include media($mobile-up) {
+        @include span-columns(6);
+      }
+      text-align: left;
+    }
+  }
+}
+
+#outside {
+  .wrapper {
+    @include outer-container;
+
+    .inside {
+      @include span-columns(6);
+      @include media($mobile) {
+        @include span-columns(12);
+      }
+    }
+  }
+}
