Start with prototyping new navbar and hero area, install bulma

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,3 +2,22 @@
 title: Steven Jackson
 ---
 
+<div class="container">
+  <div class="columns">
+    <div class="column"></div>
+    <div class="column is-half">
+      <%= partial 'navbar' %>
+    </div>
+    <div class="column"></div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="columns">
+    <div class="column"></div>
+    <div class="column is-half">
+      <%= partial 'hero' %>
+    </div>
+    <div class="column"></div>
+  </div>
+</div>
