--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,7 +7,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title %></title>
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+
 
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
