More styling, including the beginning of the projects area

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,3 +21,17 @@ title: Steven Jackson
     <div class="column"></div>
   </div>
 </div>
+
+<div class="container">
+  <div class="columns">
+    <div class="column">
+      <h2>Projects</h2>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="columns">
+    <%= partial 'projects' %>
+  </div>
+</div>
