--- a/source/stylesheets/navbar.scss
+++ b/source/stylesheets/navbar.scss
@@ -11,7 +11,7 @@ nav .nav-item {
   font-size: 1.3rem;
 }
 
-nav a, a:visited {
+nav a, nav a:visited {
   color: $color-dark-accent;
   font-weight: 300;
   padding-bottom: 3px;
