--- a/source/stylesheets/general.scss
+++ b/source/stylesheets/general.scss
@@ -11,6 +11,7 @@ $color-primary: #41B883;
 body {
   font-family: "Source Sans Pro", sans-serif;
   padding: 0 8px;
+  margin-bottom: 3rem;
 }
 
 a, a:visited, a:active {
