Add ubuntu server skill

--- a/source/_hero.erb
+++ b/source/_hero.erb
@@ -11,5 +11,7 @@
     <span class="ruby">Ruby/Rails</span>
     <span class="and">&nbsp;+&nbsp;</span>
     <span class="javascript">JS/React</span>
+    <span class="and">&nbsp;+&nbsp;</span>
+    <span class="ubuntu">Ubuntu Server</span>
   </div>
 </div>
