Add ansible to skills

--- a/source/_hero.erb
+++ b/source/_hero.erb
@@ -13,5 +13,7 @@
     <span class="javascript">JS/React</span>
     <span class="and">&nbsp;+&nbsp;</span>
     <span class="ubuntu">Ubuntu Server</span>
+    <span class="and">&nbsp;+&nbsp;</span>
+    <span class="ansible">Ansible</span>
   </div>
 </div>
