--- a/source/stylesheets/projects.scss
+++ b/source/stylesheets/projects.scss
@@ -14,8 +14,6 @@ h3 {
   display: flex;
   flex-direction: column;
   height: 100%;
-
-  padding-bottom: 1rem;
 }
 
 .project_details {
@@ -28,7 +26,6 @@ h3 {
 .project_thumbnail {
   a {
     line-height: 0;
-    padding: 0;
     display: block;
   }
   img {
@@ -36,3 +33,6 @@ h3 {
   }
 }
 
+hr {
+  margin: 0 0 1.9rem 0;
+}
