--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,10 +1,10 @@
 <nav>
   <div class="nav-item">
-    <a href="#">Projects</a>
+    <a href="/">Projects</a>
   </div>
 
   <div class="nav-item">
-    <a href="#">Blog</a>
+    <a href="https://medium.com/@steven.jackson">Blog</a>
   </div>
 
   <div class="nav-item">
