Rename Projects to Side Projects

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -25,7 +25,7 @@ title: Steven Jackson
 <div class="container">
   <div class="columns">
     <div class="column">
-      <h2>Projects</h2>
+      <h2>Side Projects</h2>
     </div>
   </div>
 </div>
